--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
         maven {
             name = "forge"
@@ -11,11 +12,11 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "0.42"
 group= "io.darkcraft.darkcore" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -25,8 +26,9 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 minecraft {
-    version = "1.7.10-10.13.3.1403-1.7.10"
+    version = "1.10.2-12.18.0.2008"
     runDir = "eclipse"
+    mappings = "snapshot_20160518"
     
 	replace "@version@", project.version
 	replaceIn "DarkcoreMod.java"
